# concordium-node-sdk-js

./: .editorconfig  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .markdown-linkcheck.json  .markdownlint.yaml  .prettierignore  .prettierrc  .yarnrc.yml  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json  tsconfig-base.json  tsconfig.eslint.json  tsconfig.jest.json  tsconfig.json  typedoc.config.cjs  typedoc.config.old.cjs  typedoc.json
.github/: dependabot.yml
.github/workflows/: build+release.yml  build+test-dapp-libraries.yml  build+test.yml  build-test-release.yml  deploy-ccd-js-gen.yml  deploy-ccdjsgen.yml  deploy-dapp-libraries.yml  deploy-react-components.yml  deploy-rust-bindings.yml  deploy-rustbindings.yml  deploy-sdk.yml  deploy-verification-web-ui.yml  deploy-wallet-connectors.yml  deployment.yml  pipeline.yml  yarn-audit-matrix.yml  yarn-audit.yml
10.0.1/: index.html
10.0.1/assets/: search.js
10.0.1/modules/: grpc.html  (+20 more)
10.0.2/: modules.html
11.0.0/: index.html  modules.html
11.1.0/: modules.html
11.1.0-alpha.1/: index.html  modules.html
11.1.1/: index.html
12.0.0-alpha.0/: index.html  modules.html
12.0.0-alpha.1/: index.html  modules.html
12.0.0-alpha.2/: modules.html
12.0.0-alpha.3/: index.html
12.0.0-devnet-p10.0/: index.html  modules.html
12.0.1/: index.html
12.1.0-alpha.4/: modules.html
common/: package.json
concordium-dapp-components-reactjs/: package.json  tsconfig.json
concordium-dapp-sample-contractupdate/: package.json  tsconfig.json
concordium-dapp-wallet-connectors/: package.json  tsconfig.json
docs/: CIS2Contract.md  JSON-RPC.md  README.md  UpgradeGuide.md  account-creation.md  common.md  documentation.md  gRPC.md  grpc-migration.md  grpc-v1.md  package.json  tsconfig.json  typedoc.config.cjs  typedoc.json
examples/: .eslintrc.json  buildAccountSigner.ts  cis0Supports.ts  execute-example.bash  package.json  readme.md  tsconfig.eslint.json  tsconfig.json
nodejs/: package.json  tsconfig.jest.json  tsconfig.json
pages/: account-creation.md  cis2-contracts.md  documentation.md  grpc.md  identity-proofs.md  runnable-examples.md  transactions.md  utility-functions.md
rust-src/: aux_functions.rs  external_functions.rs  helpers.rs  lib.rs  types.rs
scripts/: proto-node-esm.js
src/: accountAddress.ts  accountHelpers.ts  accountTransactions.ts  alias.ts  blockSummaryHelpers.ts  client.ts  credentialDeploymentTransactions.ts  crypto.ts  cryptoTest.ts  deserialization.ts  deserializeSchema.ts  encryptedTransferHelpers.ts  hash.ts  index.ts  mobileTypes.ts  passSchema.ts  rewardStatusHelpers.ts  serialization.ts  serializationHelpers.ts  shieldedTransfer.ts  types.ts  util.ts  wasmBuild.ts
test/: accountTransaction.test.ts  alias.test.ts  client.test.ts  credentialDeployment.test.ts  deployModule.test.ts  deploymodule.test.ts  deserialization.test.ts  getConsensusStatus.test.ts  getInstanceInfo.test.ts  initContract.test.ts  initContractWithParameters.test.ts  initContractWithParametersArray.test.ts  initContractWithParametersMarksStruct.test.ts  initContractWithParametersStruct.test.ts  initContractWithParametersStruct1.test.ts  initContractWithParametersUserStruct.test.ts  initContractWithParametersWithBool.test.ts  initcontract.test.ts  serialization.test.ts  testHelpers.ts  updateContract.test.ts  updateContractWithParameters.test.ts  updateContractWithParameters1.test.ts  updateContractWithParameters2.test.ts  updateContractWithParameters3.test.ts  updateContractWithParameters4.test.ts  updateContractWithParameters5.test.ts  util.test.ts
(+31602 files in other folders)
