[package]
name = "node_sdk_helpers"
version = "0.1.0"
authors = ["Concordium AG <contact@concordium.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
libc = "0.2"
pairing = "0.15"
anyhow = "1.0"
ed25519-dalek = {version = "=1.0.0", features = ["serde"] }
hex = "0.4"
ff = "0.5"
either = "1.6"
sha2 = "0.9"
rand = "=0.7"
console_error_panic_hook = "0.1.6"

[dependencies.keygen_bls]
path = "deps/concordium-base/rust-src/keygen_bls"
version = "0"

[dependencies.id]
path = "deps/concordium-base/rust-src/id"
version = "0"

[dependencies.curve_arithmetic]
path = "deps/concordium-base/rust-src/curve_arithmetic"
version = "0"

[dependencies.dodis_yampolskiy_prf]
path = "deps/concordium-base/rust-src/dodis_yampolskiy_prf"
version = "0"

[dependencies.ffi_helpers]
path = "deps/concordium-base/rust-src/ffi_helpers"
version = "0"

[dependencies.crypto_common]
path = "deps/concordium-base/rust-src/crypto_common"
version = "0"

[dependencies.pedersen_scheme]
path = "deps/concordium-base/rust-src/pedersen_scheme"
version = "0"

[dependencies.ps_sig]
path = "deps/concordium-base/rust-src/ps_sig"
version = "0"

[dependencies.encrypted_transfers]
path = "deps/concordium-base/rust-src/encrypted_transfers"
version = "0"

[dependencies.elgamal]
path = "deps/concordium-base/rust-src/elgamal"
version = "0"

[dependencies.eddsa_ed25519]
path = "deps/concordium-base/rust-src/eddsa_ed25519"
version = "0"

[dependencies.random_oracle]
path = "deps/concordium-base/rust-src/random_oracle"
version = "0"

[dependencies.aggregate_sig]
path = "deps/concordium-base/rust-src/aggregate_sig"
version = "0"

[lib]
name = "desktop_wallet"
crate-type = ["cdylib"]
path = "rust-src/lib.rs"
