[package]
name = "node_sdk_helpers"
version = "0.1.0"
authors = ["Concordium AG <developers@concordium.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
pairing = "0.15"
anyhow = "1.0"
ed25519-dalek = {version = "=1.0.0", features = ["serde"] }
hex = "0.4"
sha2 = "0.9"
rand = "=0.7"

[dependencies.id]
path = "deps/concordium-base/rust-src/id"
version = "0"

[dependencies.curve_arithmetic]
path = "deps/concordium-base/rust-src/curve_arithmetic"
version = "0"

[dependencies.dodis_yampolskiy_prf]
path = "deps/concordium-base/rust-src/dodis_yampolskiy_prf"
version = "0"

[dependencies.crypto_common]
path = "deps/concordium-base/rust-src/crypto_common"
version = "0"

[dependencies.pedersen_scheme]
path = "deps/concordium-base/rust-src/pedersen_scheme"
version = "0"

[dependencies.ps_sig]
path = "deps/concordium-base/rust-src/ps_sig"
version = "0"

[dependencies.eddsa_ed25519]
path = "deps/concordium-base/rust-src/eddsa_ed25519"
version = "0"

[dependencies.aggregate_sig]
path = "deps/concordium-base/rust-src/aggregate_sig"
version = "0"

[dependencies.random_oracle]
path = "deps/concordium-base/rust-src/random_oracle"
version = "0"

[dependencies.concordium-contracts-common]
features = ["derive-serde"]
path = "deps/concordium-contracts-common"
version = "2.0.0"

[lib]
name = "node_sdk_helpers"
crate-type = ["cdylib"]
path = "rust-src/lib.rs"
